Update and rename install_tomcat_unix.sh to tomcat_manager.sh